增加弹出框左右结构扩展

--- a/.Net6版本/VOL.WebApi/Template/Page/VueExtension.html
+++ b/.Net6版本/VOL.WebApi/Template/Page/VueExtension.html
@@ -16,6 +16,7 @@ let extension = {
     //新建、编辑弹出框扩展组件
     modelHeader: '',
     modelBody: '',
+	modelRight: '',
     modelFooter: ''
   },
   tableAction: '', //指定某张表的权限(这里填写表名,默认不用填写)
