--- a/Vol.Vue3版本/src/components/basic/ViewGrid/ViewGrid.less
+++ b/Vol.Vue3版本/src/components/basic/ViewGrid/ViewGrid.less
@@ -119,9 +119,9 @@
   }
   .form-text {
     position: relative;
-    border-bottom: 1px solid #eee;
+    // border-bottom: 1px solid #eee;
     font-size: 14px;
-    margin-bottom: 14px;
+    // margin-bottom: 14px;
   }
 }
 
