调整首页消息关闭图标不显示问题

--- a/vol.web/src/views/index/index.less
+++ b/vol.web/src/views/index/index.less
@@ -790,6 +790,9 @@ img:not([src]) {
     ::v-deep(.el-icon) {
       color: white;
     }
+    ::v-deep(.el-dialog .el-icon){
+      color: #000;
+    }
   }
 }
 
