同步sugar版移动端生成模板

--- a/vol.api.sqlsugar/VOL.WebApi/Template/Page/app/options.html
+++ b/vol.api.sqlsugar/VOL.WebApi/Template/Page/app/options.html
@@ -1,23 +1,35 @@
-//************************************************ 
-//  *Author：jxx
-//  *QQ：283591387
-//  *代码由框架生成,任何更改都可能导致被代码生成器覆盖
-//  *业务请在#TableName.js中编写
-//************************************************ 
-export default function() {
-	return {
-		editFormFields: #editFormFileds,
-		editFormOptions: #editFormOptions,
-		searchFormFields: #searchFormFileds,
-		searchFormOptions: #searchFormOptions,
-		columns: [#columns],
-		table: {
+/*这是生成的配置信息,任何修改都会被生成覆盖,如果需要修改,请在生成{#table}.vue中修改,searchFormOptions、editFormOptions、columns属性
+Author:vol
+ QQ:283591387
+ Date:2024
+*/
+export default function(){
+		const table = {
+			tableName: "#TableName",
+			tableCNName: "#cnName",
+			titleField:'#titleField',
 			key: '#key',
-			footer: "Foots",
-			cnName: '#cnName',
-			name: '#TableName',
-			url: "#url",
 			sortName: "#SortName"
 		}
-	}
+
+	    const searchFormFields = #searchFormFileds;
+	    const searchFormOptions = #searchFormOptions
+        const editFormFields = #editFormFileds;
+        const editFormOptions = #editFormOptions;
+
+		const columns = [#columns];
+
+        const detail = #tables1;
+        const details = #tables2;
+
+    return {
+        table,
+		searchFormFields,
+		searchFormOptions,
+        editFormFields,
+        editFormOptions,
+		columns,
+		detail,
+		details
+    }
 }
