--- a/vol.web/src/views/index/aside.less
+++ b/vol.web/src/views/index/aside.less
@@ -274,12 +274,11 @@
   }
 }
 
-.vol-path ::v-deep(.el-tabs__header) {
-  border-top: 1px solid #e9e9e973;
-  border-bottom: 1px solid #e9e9e973;
-  background: #fff;
- // background: linear-gradient(to left, rgba(88, 78, 78, 0), #ebf9ff, #fffbfb, #faf0ef24, #ecf9ff4d, #f1f6ffab, #fafdff);
-}
+// .vol-path ::v-deep(.el-tabs__header) {
+//   border-top: 1px solid #e9e9e973;
+//   border-bottom: 1px solid #e9e9e973;
+//   background: #fff;
+// }
 
 .vol-aside-project-name {
   color: #fff;
